// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can create a Fake flipper 1`] = `
Object {
  "androidEmulators": Array [],
  "clients": Array [
    Object {
      "id": "TestApp#Android#MockAndroidDevice#serial",
      "query": Object {
        "app": "TestApp",
        "device": "MockAndroidDevice",
        "device_id": "serial",
        "os": "Android",
        "sdk_version": 4,
      },
    },
  ],
  "deepLinkPayload": null,
  "devices": Array [
    Object {
      "deviceType": "physical",
      "os": "Android",
      "serial": "serial",
      "title": "MockAndroidDevice",
    },
  ],
  "enabledDevicePlugins": Set {
    "DeviceLogs",
    "CrashReporter",
    "MobileBuilds",
    "Hermesdebuggerrn",
    "React",
  },
  "enabledPlugins": Object {
    "TestApp": Array [
      "TestPlugin",
    ],
  },
  "selectedApp": "TestApp#Android#MockAndroidDevice#serial",
  "selectedAppPluginListRevision": 0,
  "selectedDevice": Object {
    "deviceType": "physical",
    "os": "Android",
    "serial": "serial",
    "title": "MockAndroidDevice",
  },
  "selectedPlugin": "TestPlugin",
  "staticView": null,
  "uninitializedClients": Array [],
  "userPreferredApp": "TestApp#Android#MockAndroidDevice#serial",
  "userPreferredDevice": "MockAndroidDevice",
  "userPreferredPlugin": "TestPlugin",
}
`;

exports[`can create a Fake flipper 2`] = `
Object {
  "bundledPlugins": Map {},
  "clientPlugins": Map {
    "TestPlugin" => [Function],
  },
  "devicePlugins": Map {},
  "disabledPlugins": Array [],
  "failedPlugins": Array [],
  "gatekeepedPlugins": Array [],
  "initialised": false,
  "installedPlugins": Map {},
  "loadedPlugins": Map {},
  "marketplacePlugins": Array [],
  "selectedPlugins": Array [],
  "uninstalledPluginNames": Set {},
}
`;

exports[`can create a Fake flipper with legacy wrapper 1`] = `
Object {
  "androidEmulators": Array [],
  "clients": Array [
    Object {
      "id": "TestApp#Android#MockAndroidDevice#serial",
      "query": Object {
        "app": "TestApp",
        "device": "MockAndroidDevice",
        "device_id": "serial",
        "os": "Android",
        "sdk_version": 4,
      },
    },
  ],
  "deepLinkPayload": null,
  "devices": Array [
    Object {
      "deviceType": "physical",
      "os": "Android",
      "serial": "serial",
      "title": "MockAndroidDevice",
    },
  ],
  "enabledDevicePlugins": Set {
    "DeviceLogs",
    "CrashReporter",
    "MobileBuilds",
    "Hermesdebuggerrn",
    "React",
  },
  "enabledPlugins": Object {
    "TestApp": Array [
      "TestPlugin",
    ],
  },
  "selectedApp": "TestApp#Android#MockAndroidDevice#serial",
  "selectedAppPluginListRevision": 0,
  "selectedDevice": Object {
    "deviceType": "physical",
    "os": "Android",
    "serial": "serial",
    "title": "MockAndroidDevice",
  },
  "selectedPlugin": "TestPlugin",
  "staticView": null,
  "uninitializedClients": Array [],
  "userPreferredApp": "TestApp#Android#MockAndroidDevice#serial",
  "userPreferredDevice": "MockAndroidDevice",
  "userPreferredPlugin": "TestPlugin",
}
`;

exports[`can create a Fake flipper with legacy wrapper 2`] = `
Object {
  "bundledPlugins": Map {},
  "clientPlugins": Map {
    "TestPlugin" => SandyPluginDefinition {
      "details": Object {
        "dir": "/Users/mock/.flipper/thirdparty/flipper-plugin-sample1",
        "entry": "./test/index.js",
        "id": "TestPlugin",
        "isActivatable": true,
        "isBundled": false,
        "main": "dist/bundle.js",
        "name": "flipper-plugin-hello",
        "pluginType": "client",
        "source": "src/index.js",
        "specVersion": 2,
        "title": "TestPlugin",
        "version": "0.1.0",
      },
      "id": "TestPlugin",
      "isDevicePlugin": false,
      "module": Object {
        "Component": [Function],
        "plugin": [Function],
      },
    },
  },
  "devicePlugins": Map {},
  "disabledPlugins": Array [],
  "failedPlugins": Array [],
  "gatekeepedPlugins": Array [],
  "initialised": false,
  "installedPlugins": Map {},
  "loadedPlugins": Map {},
  "marketplacePlugins": Array [],
  "selectedPlugins": Array [],
  "uninstalledPluginNames": Set {},
}
`;
